--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
+    "test": "env-cmd -f ./config/test.env jest --watch --runInBand"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
@@ -19,10 +23,12 @@
     "mongoose": "^6.1.4",
     "multer": "^1.4.4",
     "sharp": "^0.29.3",
+    "supertest": "^6.1.6",
     "validator": "^13.7.0"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
+    "jest": "^27.4.6",
     "nodemon": "^2.0.15"
   }
 }
